# evative7-pykg-template

./: README.md  pyproject.toml
.github/workflows/: package.yml  python-publish.yml  release.yml
