[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools-scm"]

[project]
authors = [{ name = "EvATive7" }]
classifiers = [ # TODO: Finish this
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [] # TODO: Finish this
description = "" # TODO: Finish this
name = "hello_world" # TODO: Finish this
readme = "README.md"
requires-python = ">=3.6" # TODO: Finish this
dynamic = ['version']
# license = { text = "MIT" } # TODO: Finish this

[project.optional-dependencies]
dev = ["pytest"] # TODO: Finish this

# [project.scripts]
# helloworld = "hello_world:main" # TODO: Finish this, if a script is needed

[project.urls]
"Homepage" = "https://github.com/EvATive7/" # TODO: Finish this

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"


# TODO: Finish this file if you need to add anything
